Fix "About" menu position to avoid truncation
Refs pombase/website#1768

--- a/src/app/main-nav-bar/main-nav-bar.component.css
+++ b/src/app/main-nav-bar/main-nav-bar.component.css
@@ -54,3 +54,9 @@ button.dropdown-item {
     padding: 0.4em;
   }
 }
+
+/* See: https://github.com/valor-software/ngx-bootstrap/issues/4226 */
+.dropdown-menu-right {
+  right: 0 !important;
+  left: auto !important;
+}
